# provability-fabric

./: .gitignore  Fabric.lean  IMPLEMENTATION_STATUS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TEST_REPORT.md  IMPLEMENTATION_UPDATE.md  LEAN_OFFLINE_IMPLEMENTATION.md  LICENSE  Makefile  PAPER_IMPLEMENTATION_README.md  PROJECT_DOCUMENTATION.md  ProofBench.lean  README.md  REDIS_WINDOWS_SETUP.md  SECURITY.md  TRUST_FIRE_DEBUGGING.md  TRUST_FIRE_STATUS.md  and component descriptions  comprehensive_test_report_20250818_155322.json  fix_infrastructure.py  fix_infrastructure_simple.py  invalid-rate-card.json  lakefile.lean  paper_latex_blocks.tex  paper_results_summary.md  performance_report_20250814_170135.json  performance_report_20250814_173206.json  performance_report_20250814_174121.json  performance_report_20250814_174247.json  pii_test_results.json  privacy_test_report_test-tenant_20250814_173140.json  privacy_test_report_test-tenant_20250814_173541.json  privacy_test_report_test-tenant_20250814_173600.json  privacy_test_report_test-tenant_20250814_173619.json  privacy_test_report_test-tenant_20250814_173655.json  privacy_test_report_test-tenant_20250814_173730.json  privacy_test_report_test-tenant_20250814_173801.json  replay_test_results.json  results.json  simple_pii_test.py  (+10 more)
.github/codeql/: codeql-config.yml
.github/workflows/: allowlist-sync.yaml  art-benchmark.yaml  art-dataset-cache.yaml  art-report.yaml  billing-test.yaml  bundle-check.yaml  cert-validate.yml  chaos-nightly.yaml  ci.yaml  cla-bot.yaml  codeql.yaml  compliance.yaml  dep-graph.yaml  dfa.yaml  docs-build.yaml  docs-deploy.yaml  dr-cross.yaml  edge-load.yaml  egress.yml  evidence.yaml  fuzz.yaml  heartbeat-test.yaml  incident-e2e.yaml  incident-test.yaml  integration.yaml  lean-morph.yml  lean-offline.yaml  lean-style.yaml  loadtest.yaml  marketplace-e2e.yaml  morph-replay.yml  multiarch-build.yaml  opa-test.yaml  operational-excellence.yaml  paper-conformance.yaml  perf-proofmeter.yaml  perf.yaml  performance-gate.yaml  pf-ci.yaml  pf-cross-repo-consumer.yaml  (+18 more)
CLA/: cla.json
adapters/dryvr/: adapter.sh
adapters/evil-netcall/: build.bat  build.sh  evil_netcall.wasm  manifest.json
adapters/fileread/: Cargo.toml  seccomp.rs
adapters/fileread/src/: lib.rs  main.rs
adapters/hello-world/: hello.wasm  manifest.json
adapters/httpget/: Cargo.toml  seccomp.rs
adapters/httpget/src/: lib.rs  main.rs
adapters/marabou/: adapter.py  requirements.txt
api/v1/: egress.proto  kernel.proto  plan.proto  (+2 more)
bench/: README.md  performance_benchmarks.rs
core/sdk/rust/: Cargo.toml  build.rs
core/sdk/rust/src/: client.rs  error.rs  lib.rs  types.rs  utils.rs
docker/: art-agent.sh  art-compose.yaml  art-proofmeter.sh  art-watcher.sh
docs/: ART_LAUNCH_GUIDE.md  Evidence.md  Morph.md  README.md  Replay.md  acceptance-checklist.md  action_dsl_sidecar_implementation.md  adapters.md  api-reference.md  architecture.md  attestation.md  check_guarantees.py  ci-reference.md  cli-reference.md  configuration.md  cross-region-dr.md  demos.md  deployment-guide.md  developer-guide.md  evidence-and-certs.md  examples.md  getting-started.md  glossary.md  guarantees.md  index.md  mkdocs.yml  multi-tenant.md  operational-excellence.md  optimization-implementation-summary.md  policy.md  proof-quality-gates.md  runbook.md  specassistant.md  standards.md  stochastic-proof-regression.md  testing-guide.md
figs/: overview.aux  overview.tex
fixtures/: fixture_42.json
proofs/: Policy.lean  README.md  lakefile.lean
registry/: manifest.schema.json
releaser/: generate-provenance.sh  supply-chain-reproducibility.nix  validate-release.sh
runtime/attestor/: Cargo.toml  Dockerfile  README.md
runtime/attestor/src/: attest.rs  main.rs  nitro.rs  sev.rs
runtime/egress-firewall/: Cargo.toml  Dockerfile  build.rs
runtime/egress-firewall/.cargo/: config.toml
runtime/egress-firewall/policies/: templates.yaml
runtime/egress-firewall/src/: main.rs  optimizations.rs  pipeline.rs  policies.rs
runtime/egress-firewall/src/detectors/: mod.rs  near_dupe.rs  pii.rs  secrets.rs
runtime/kms-proxy/: Cargo.toml
runtime/kms-proxy/src/: main.rs
runtime/sidecar-watcher/: Cargo.toml  Dockerfile
runtime/sidecar-watcher/fuzz/: Cargo.toml
runtime/sidecar-watcher/fuzz/fuzz_targets/: json_actions.rs
runtime/sidecar-watcher/policy/: allowlist.json
runtime/sidecar-watcher/src/: answer_meta.rs  assumption.rs  break_glass.rs  broker.rs  caps.rs  cert_v1.rs  crypto.rs  declassify.rs  dfa.rs  effects.rs  egress_cert.rs  enforce.rs  events.rs  label_witness.rs  lib.rs  main.rs  ni_monitor.rs  permission_cert.rs  permit_enforcement.rs  plan.rs  policy_adapter.rs  queue_manager.rs  ratelimit.rs  replay.rs  revocation.rs  scheduler.rs  telemetry.rs
runtime/sidecar-watcher/src/privacy/: mod.rs
runtime/sidecar-watcher/tests/: break_glass_mechanism.rs  declassify_engine.rs  dfa_equiv.rs  events_plan_dsl.rs  hardened_adapters.rs  integration_tests.rs  ni_monitor_egress.rs  safety_case_bundle.rs
runtime/wasm-sandbox/: Cargo.toml  README.md
runtime/wasm-sandbox/src/: main.rs
scripts/: art_runner.py  art_to_bundle.py  bench.py  build-multiarch.bat  build-multiarch.sh  check-dup-lean.bat  check-dup-lean.sh  check-egress.sh  forbid-shadowing.sh  generate-cve.sh  generate_art_chart.py  install.bat  install.sh  lean_time_budget.bat  lean_time_budget.sh  release_fence.sh  test-new-user.bat  test-new-user.sh  update_art_badge.py  vendor-mathlib.bat  vendor-mathlib.sh  windows-troubleshoot.sh  zero-downtime-upgrade.sh
tests/: action_dsl_extension_test.py  art_judge.py  art_runner.py  art_validation.py  policy_adapter.py  test_art_runner.py  test_art_triple_check.py  trust_fire_orchestrator.py  witness_validator.py
tools/: art_fetch.py  art_flake_detect.py  art_metrics_push.py  gen_allowlist_from_lean.py  generate_dfa_traces.py  invariant_gate.py  lean_allowlist_check.py  lean_ast_hash.py  lean_dep_graph.py  lean_gate.py  lean_gate_config.yaml  policy_conflicts_checker.py  retention_probe.py  select_impacted.py  verify_ni_bridge.py
(+416 files in other folders)
