[package]
name = "fileread-adapter"
version = "0.1.0"
edition = "2021"
authors = ["Provability-Fabric Contributors"]
description = "Hardened file-read adapter with effect signatures and security enforcement"
license = "Apache-2.0"
repository = "https://github.com/provability-fabric/provability-fabric"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
libseccomp = "0.1"
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
seccomp = ["libseccomp"]

[[bin]]
name = "fileread-adapter"
path = "src/main.rs"
