[package]
name = "sidecar-watcher"
version = "0.1.0"
edition = "2021"
authors = ["Provability-Fabric Contributors"]
license = "Apache-2.0"

[lib]
name = "sidecar_watcher"
path = "src/lib.rs"

[[bin]]
name = "sidecar-watcher"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
prometheus = { version = "0.13", features = ["process"] }
prometheus_client = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
ed25519-dalek = { version = "2.0", features = ["batch"] }
rand = "0.8"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

[dev-dependencies]
tokio-test = "0.4" 