[package]
name = "wasm-sandbox"
version = "0.1.0"
edition = "2021"
authors = ["Provability-Fabric Contributors"]
license = "Apache-2.0"

[dependencies]
wasmtime = "15.0"
wasmtime-wasi = "15.0"
wasmtime-wasi-preview1 = "15.0"
wasmtime-wasi-preview2 = "15.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"